fixed element spacing

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -62,3 +62,8 @@ button:hover {
 	text-align: center;
 	font-size: 15px;
 }
+
+.signup-note {
+	margin: 0 auto;
+	text-align: center;
+}
