--- a/src/components/search-field/search.css
+++ b/src/components/search-field/search.css
@@ -25,6 +25,10 @@ img {
 	float: left;
 }
 
+button.add-button {
+	margin: 0;
+}
+
 .search-list-item button {
 	width: 20%;
 	float: right;
